# Moxy

./: README.md
backend/: main.py  pyproject.toml
backend/src/: __init__.py  addon.py  db.py
backend/src/api/: agent.py  projects.py  requests.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: AppTabs.tsx  MoxyLogo.tsx  RequestFilters.tsx  RequestList.tsx
frontend/src/components/tabs/: AgentTab.tsx  HomeTab.tsx  ProjectTab.tsx  ResenderTab.tsx
frontend/src/contexts/: ResenderContext.tsx
frontend/src/lib/: api.ts  requestTransform.ts
