[project]
name = "moxy"
version = "1.0.2"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "mitmproxy",
    "browser-use",
    "openai-agents"
]

[project.scripts]
moxy = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["main.py"]
